adding .env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-JWT_TOKEN=
-OPENAI_API_KEY=
-GET_PRICE_API=https://testppapi.mspl.pk/quote/API/Price/GetPrice2
 
-FORM_GET_SCHEMA_URL=https://testppapi.mspl.pk/quote/swagger/v2/swagger.json
+OPENAI_API_KEY=
+GET_PRICE_API=
+QUOTE_API_URL=
+FORM_GET_SCHEMA_URL=
 POSTGRES_URL=
+QUOTE_API_USERNAME=
+QUOTE_API_PASSWORD=
+AGENT_API_KEY=
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
+
+LANGSMITH_TRACING=
+LANGSMITH_ENDPOINT=
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=
