--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,18 +1,18 @@
-name: Local Machine Multi-Server Deploy
+name: Windows Server Single-Stage Deploy
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  # 1. Build Job: Docker Hub par image push karega
+  # Stage 1: Build the image and push to Docker Hub
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Login to Docker Hub (Cloud)
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -23,20 +23,19 @@ jobs:
         with:
           context: .
           push: true
-          # Image ka naam: username/repository-name:latest
+          # Uses the repo name as the image name automatically
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
-  # 2. Deploy to Testing
-  deploy-test:
+  # Stage 2: Deploy to your Windows Server
+  deploy:
     needs: build
     runs-on: [self-hosted, testing-server]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Deploy with Docker Compose (Test)
+      - name: Deploy with Docker Compose
         shell: powershell
-        # CRITICAL: Map GitHub Secrets to Shell Environment Variables
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -49,38 +48,13 @@ jobs:
           QUOTE_API_PASSWORD: ${{ secrets.QUOTE_API_PASSWORD }}
           GET_PRICE_API: ${{ secrets.GET_PRICE_API }}
           SIGNIN_API: ${{ secrets.SIGNIN_API }}
-          APP_PORT: "9090" # Port for Testing
+          APP_PORT: "9090" 
         run: |
+          # 1. Pull the latest image from Docker Hub
           docker compose -f docker-compose.prod.yaml pull
+          
+          # 2. Restart containers with new image and config
           docker compose -f docker-compose.prod.yaml up -d --remove-orphans --force-recreate
-          docker image prune -f
-
-  # 3. Deploy to Production
-  deploy-prod:
-    needs: deploy-test
-    environment: production
-    runs-on: [self-hosted, prod-server]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Deploy with Docker Compose (Prod)
-        shell: powershell
-        # CRITICAL: Map GitHub Secrets to Shell Environment Variables
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          AGENT_API_KEY: ${{ secrets.AGENT_API_KEY }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          QUOTE_API_USERNAME: ${{ secrets.QUOTE_API_USERNAME }}
-          QUOTE_API_PASSWORD: ${{ secrets.QUOTE_API_PASSWORD }}
-          GET_PRICE_API: ${{ secrets.GET_PRICE_API }}
-          SIGNIN_API: ${{ secrets.SIGNIN_API }}
-          APP_PORT: "8080" # Port for Production
-        run: |
-          docker compose -f docker-compose.prod.yaml pull
-          docker compose -f docker-compose.prod.yaml up -d --remove-orphans --force-recreate
+          
+          # 3. Clean up old unused images to save space
           docker image prune -f
